[workspace]
members = [
  "cli",
  "plateau-gis-quality-checker/src-tauri",
  "runtime/*",
  "worker",
]

default-members = ["runtime/*"]

resolver = "2"

[workspace.package]
authors = ["Re:Earth Flow Contributors"]
edition = "2021"
exclude = ["benches/", "test-data/", "testdata/"]
homepage = "https://github.com/reearth/reearth-flow"
license = "MIT OR Apache-2.0"
repository = "https://github.com/reearth/reearth-flow"
rust-version = "1.85" # Remember to update clippy.toml as well
version = "0.0.84"

[profile.dev]
opt-level = 0

# Like release, but with full debug symbols and with stack unwinds. Useful for e.g. `perf`.
[profile.debug-fast]
debug = true
incremental = false
inherits = "release"
panic = "unwind"
strip = "none"

# Optimized release profile
[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = true

[profile.release-lto]
codegen-units = 8
inherits = "release"
lto = "fat"

[workspace.dependencies]
reearth-flow-action-log = { path = "runtime/action-log" }
reearth-flow-action-plateau-processor = { path = "runtime/action-plateau-processor" }
reearth-flow-action-processor = { path = "runtime/action-processor" }
reearth-flow-action-sink = { path = "runtime/action-sink" }
reearth-flow-action-source = { path = "runtime/action-source" }
reearth-flow-action-wasm-processor = { path = "runtime/action-wasm-processor" }
reearth-flow-common = { path = "runtime/common" }
reearth-flow-eval-expr = { path = "runtime/eval-expr" }
reearth-flow-geometry = { path = "runtime/geometry" }
reearth-flow-gltf = { path = "runtime/gltf" }
reearth-flow-macros = { path = "runtime/macros" }
reearth-flow-runner = { path = "runtime/runner" }
reearth-flow-runtime = { path = "runtime/runtime" }
reearth-flow-sevenz = { path = "runtime/sevenz" }
reearth-flow-sql = { path = "runtime/sql" }
reearth-flow-state = { path = "runtime/state" }
reearth-flow-storage = { path = "runtime/storage" }
reearth-flow-telemetry = { path = "runtime/telemetry" }
reearth-flow-types = { path = "runtime/types" }

nusamai-citygml = { git = "https://github.com/reearth/plateau-gis-converter", tag = "v0.8.2", features = [
  "serde",
  "serde_json",
] }
nusamai-czml = { git = "https://github.com/reearth/plateau-gis-converter", tag = "v0.8.2" }
nusamai-gltf = { git = "https://github.com/reearth/plateau-gis-converter", tag = "v0.8.2" }
nusamai-plateau = { git = "https://github.com/reearth/plateau-gis-converter", tag = "v0.8.2", features = [
  "serde",
] }
nusamai-projection = { git = "https://github.com/reearth/plateau-gis-converter", tag = "v0.8.2" }
nusamai-shapefile = { git = "https://github.com/reearth/plateau-gis-converter", tag = "v0.8.2" }

Inflector = "0.11.4"
ahash = "0.8.11"
approx = "0.5.1"
async-recursion = "1.1.1"
async-stream = "0.3.6"
async-trait = "0.1.87"
async_zip = { version = "0.0.17", features = ["full"] }
atlas-packer = { git = "https://github.com/reearth/atlas-packer", tag = "v0.0.2" }
base64 = "0.22.1"
bincode = { version = "2.0.1", default-features = false, features = [
  "serde",
  "std",
] }
bytemuck = { version = "1.22.0", features = ["derive"] }
byteorder = "1.5.0"
bytes = { version = "1.10.1", features = ["serde"] }
calamine = "0.26.1"
cesiumtiles = { git = "https://github.com/reearth/cesiumtiles-rs", tag = "v0.0.1" }
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.32", features = ["env", "string"] }
clipper-sys = "0.8.0"
color-eyre = "0.6.3"
colored = "3.0.0"
colorsys = "0.6.7"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.14"
crossbeam-utils = "0.8.21"
csv = "1.3.1"
directories = "6.0.0"
earcut = "0.4.4"
flate2 = "1.1.0"
flatgeom = "0.0.2"
float_next_after = "1.0.0"
futures = "0.3.31"
futures-util = "0.3.31"
geo = "0.29.3"
geo-buffer = "0.2.0"
geo-types = "0.7.15"
geojson = "0.24.2"
glam = "0.30.0"
hashbrown = { version = "0.15.2", features = ["serde"] }
home = "0.5.11"
image = { version = "0.25.5", default-features = false, features = [
  "jpeg",
  "png",
  "rayon",
  "tiff",
  "webp",
] }
indexmap = { version = "2.8.0", features = ["rayon", "serde"] }
indoc = "2.0.6"
itertools = "0.14.0"
json-subscriber = "0.2.4"
jsonpath_lib = "0.3.0"
libxml = "0.3.3"
nalgebra = "0.33.2"
nalgebra-glm = "0.19.0"
num-traits = "0.2.19"
num_cpus = "1.16.0"
nutype = { version = "0.6.1", features = ["schemars08", "serde"] }
object_store = "0.12.0"
once_cell = "1.21.0"
opendal = { version = "0.52.0", features = [
  "layers-metrics",
  "services-fs",
  "services-gcs",
  "services-http",
] }
opentelemetry = { version = "0.28.0", default-features = false, features = [
  "metrics",
  "trace",
] }
opentelemetry-otlp = { version = "0.28.0", default-features = false, features = [
  "grpc-tonic",
  "metrics",
  "trace",
] }
opentelemetry-semantic-conventions = "0.28.0"
opentelemetry-stdout = { version = "0.28.0", default-features = false, features = [
  "metrics",
  "trace",
] }
opentelemetry_sdk = { version = "0.28.0", default-features = false, features = [
  "metrics",
  "rt-tokio",
  "trace",
] }
parking_lot = "0.12.3"
petgraph = "0.6.5"
pretty_assertions = "1.4.1"
prost = "0.13.5"
quick-xml = { version = "0.37.2", features = ["serialize"] }
rand = "0.9.0"
rayon = "1.10.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", default-features = false, features = [
  "blocking",
  "rustls-tls",
] }
rhai = { version = "1.21.0", features = [
  "internals",
  "metadata",
  "serde",
  "sync",
] }
rmp-serde = "1.3.0"
robust = "1.1.0"
rstar = "0.12.2"
rstest = "0.25.0"
rust_xlsxwriter = "0.84.0"
schemars = { version = "0.8.22", features = ["chrono", "uuid1"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0.219"
serde_json = { version = "1.0.140", features = ["arbitrary_precision"] }
serde_yaml = "0.9.34"
sha2 = "0.10.8"
shapefile = "0.6.0"
slog = { version = "2.7.0", features = [
  "max_level_trace",
  "release_max_level_trace",
] }
slog-async = "2.8.0"
slog-term = "2.9.1"
sloggers = { version = "2.2.0", default-features = false }
sqlx = { version = "0.8.3", features = [
  "any",
  "chrono",
  "mysql",
  "postgres",
  "runtime-tokio",
  "sqlite",
  "tls-rustls",
] }
strum = "0.27.1"
strum_macros = "0.27.1"
tempfile = "3.18.0"
thiserror = "2.0.12"
time = { version = "0.3.39", features = ["formatting"] }
tinymvt = { git = "https://github.com/MIERUNE/tinymvt.git", tag = "v0.0.1" }
tokio = { version = "1.44.0", features = ["full", "time"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = { version = "0.7.13", features = ["full"] }
toml = "0.8.20"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-opentelemetry = { version = "0.29.0", default-features = false, features = [
  "metrics",
  "tracing-log",
] }
tracing-subscriber = { version = "0.3.19", features = [
  "env-filter",
  "json",
  "std",
  "time",
] }
url = "2.5.4"
uuid = { version = "1.15.1", features = [
  "fast-rng",
  "macro-diagnostics",
  "serde",
  "v4",
] }
walkdir = "2.5.0"
wasmer = "5.0.3"
wasmer-wasix = "0.33.0"
zip = "2.2.3"
zstd = "0.13.3"
