[workspace]
members = ["app", "crates/*"]

resolver = "2"

[workspace.package]
authors = ["Re:Earth Flow Contributors"]
edition = "2021"
exclude = ["benches/", "test-data/", "testdata/"]
homepage = "https://github.com/reearth/reearth-flow/websocket"
license = "MIT OR Apache-2.0"
repository = "https://github.com/reearth/reearth-flow/websocket"
rust-version = "1.81"
version = "0.1.0"

[profile.dev]
opt-level = 0

# Like release, but with full debug symbols and with stack unwinds. Useful for e.g. `perf`.
[profile.debug-fast]
debug = true
incremental = false
inherits = "release"
panic = "unwind"
strip = "none"

# Optimized release profile
[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = true

[workspace.dependencies]
flow-websocket-domain = { path = "crates/domain" }
flow-websocket-infra = { path = "crates/infra" }
flow-websocket-services = { path = "crates/services" }

async-trait = "0.1.80"
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
axum-macros = "0.4"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.4.0"
google-cloud-storage = "0.18"
lru = "0.12.4"
mockall = { version = "0.13.0" }
redis = { version = "0.25.4", features = ["aio", "tokio-comp"] }
rslock = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.117", features = ["arbitrary_precision"] }
tempfile = "3.12.0"
thiserror = "1.0.64"
tokio = { version = "1.38.0", features = ["full", "time"] }
tower = { version = "0.4", features = ["timeout"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.8.0", features = [
  "fast-rng",
  "macro-diagnostics",
  "serde",
  "v4",
] }
yrs = "0.18"
dotenv = "0.15.0"
envy = "0.4.2"