[workspace]
members = ["app", "crates/*"]

resolver = "2"

[workspace.package]
authors = ["Re:Earth Flow Contributors"]
edition = "2021"
exclude = ["benches/", "test-data/", "testdata/"]
homepage = "https://github.com/reearth/reearth-flow/websocket"
license = "MIT OR Apache-2.0"
repository = "https://github.com/reearth/reearth-flow/websocket"
rust-version = "1.81"
version = "0.1.0"

[profile.dev]
opt-level = 0

# Like release, but with full debug symbols and with stack unwinds. Useful for e.g. `perf`.
[profile.debug-fast]
debug = true
incremental = false
inherits = "release"
panic = "unwind"
strip = "none"

# Optimized release profile
[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = true

[workspace.dependencies]
flow-websocket-infra = { path = "crates/infra", default-features = false }
flow-websocket-services = { path = "crates/services", default-features = false }

async-trait = "0.1.80"
axum = { version = "0.7.9", features = ["ws"] }
axum-extra = { version = "0.9.6", features = ["typed-header"] }
axum-macros = "0.4"
base64 = "0.22.1"
bb8 = "0.8"
bb8-redis = "0.17.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
envy = "0.4.2"
futures = "0.3.4"
futures-util = "0.3"
google-cloud-storage = "0.22.1"
lru = "0.12.4"
mockall = { version = "0.13.0" }
rand = "0.8"
redis = { version = "0.27.5", features = ["aio", "tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.133", features = ["arbitrary_precision"] }
serde_yaml = "0.9.0"
sha2 = "0.10.8"
tempfile = "3.12.0"
thiserror = "2.0.3"
tokio = { version = "1.38.0", features = ["full", "time"] }
tokio-tungstenite = "0.20"
tower = { version = "0.5.1", features = ["timeout"] }
tower-http = { version = "0.6.1", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.4"
uuid = { version = "1.8.0", features = [
  "fast-rng",
  "macro-diagnostics",
  "serde",
  "v4",
] }
yrs = "0.21.3"
