[package]
name = "websocket"
version = "0.8.0"
edition = "2021"
description = "Yrs synchronization protocol using Warp web sockets"
license = "MIT"
authors = ["Bartosz Sypytkowski <b.sypytkowski@gmail.com>"]
keywords = ["crdt", "yrs", "warp"]
homepage = "https://github.com/y-crdt/yrs-warp/"
repository = "https://github.com/y-crdt/yrs-warp/"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yrs = { version = "0.21.3", features = ["sync"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.6.2", features = ["fs"] }
futures-util = { version = "0.3", features = ["sink"] }
tokio = { version = "1.36", features = [
  "rt",
  "net",
  "sync",
  "macros",
  "rt-multi-thread",
] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
tracing = { version = "0.1", features = ["log"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
# lmdb-rs = { version = "0.7" }
thiserror = "2.0.6"
smallvec = { version = "1.10", features = [
  "write",
  "union",
  "const_generics",
  "const_new",
] }
anyhow = "1.0"
tempdir = "0.3.7"
google-cloud-storage = "0.23.0"
async-trait = "0.1.83"
futures = { version = "0.3", features = ["executor"] }
redis = { version = "0.27.5", features = ["tokio-comp", "connection-manager"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.22"
tracing-subscriber = "0.3"
hex = "0.4"
config = "0.14.1"
dashmap = "6.1.0"

[dev-dependencies]
tokio-tungstenite = "0.24.0"
tokio = { version = "1", features = ["full"] }
bytes = "1.6"
mockall = "0.13.1"
criterion = { version = "0.5.1", features = ["async"] }
url = "2.2.2"

[[bench]]
name = "server_bench"
harness = false
