[workspace]
members = [
  "crates/*",
  "examples",
  "tests",
]
resolver = "2"

[workspace.package]
authors = ["Re:Earth Flow Contributors"]
edition = "2021"
exclude = ["benches/", "test-data/", "testdata/"]
homepage = "https://github.com/reearth/reearth-flow"
license = "MIT OR Apache-2.0"
repository = "https://github.com/reearth/reearth-flow"
rust-version = "1.78" # Remember to update clippy.toml as well
version = "0.1.0"

[profile.dev]
opt-level = 0

# Like release, but with full debug symbols and with stack unwinds. Useful for e.g. `perf`.
[profile.debug-fast]
debug = true
incremental = false
inherits = "release"
panic = "unwind"
strip = "none"

# Optimized release profile
[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = true

[workspace.dependencies]
reearth-flow-action-log = {path = "crates/action-log"}
reearth-flow-action-processor = {path = "crates/action-processor"}
reearth-flow-action-sink = {path = "crates/action-sink"}
reearth-flow-action-source = {path = "crates/action-source"}
reearth-flow-cli = {path = "crates/cli"}
reearth-flow-common = {path = "crates/common"}
reearth-flow-eval-expr = {path = "crates/eval-expr"}
reearth-flow-geometry = {path = "crates/geometry"}
reearth-flow-macros = {path = "crates/macros"}
reearth-flow-runner = {path = "crates/runner"}
reearth-flow-runtime = {path = "crates/runtime"}
reearth-flow-state = {path = "crates/state"}
reearth-flow-storage = {path = "crates/storage"}
reearth-flow-telemetry = {path = "crates/telemetry"}
reearth-flow-types = {path = "crates/types"}

nusamai-citygml = {git = "https://github.com/reearth/plateau-gis-converter", features = ["serde", "serde_json"]}
nusamai-geometry = {git = "https://github.com/reearth/plateau-gis-converter", features = ["serde"]}
nusamai-plateau = {git = "https://github.com/reearth/plateau-gis-converter", features = ["serde"]}
nusamai-projection = {git = "https://github.com/reearth/plateau-gis-converter"}

async-trait = "0.1.80"
async_zip = {version = "0.0.17", features = ["full"]}
bytes = {version = "1.6.0", features = ["serde"]}
chrono = {version = "0.4.38", features = ["serde"]}
color-eyre = "0.6.3"
colorsys = "0.6.7"
crossbeam = "0.8.4"
csv = "1.3.0"
derive_more = "0.99.17"
directories = "5.0.1"
float_next_after = "1.0.0"
futures = "0.3.30"
futures-util = "0.3.30"
hashbrown = "0.14.5"
indexmap = "2.2.6"
itertools = "0.13.0"
jsonpath_lib = "0.3.0"
libxml = "0.3.3"
nutype = {version = "0.4.2", features = ["serde", "schemars08"]}
object_store = "0.10.0"
once_cell = "1.19.0"
opendal = {version = "0.46.0", features = ["layers-metrics", "services-fs", "services-gcs", "services-http"]}
opentelemetry = {version = "0.23.0", default-features = false, features = ["trace", "metrics"]}
opentelemetry-otlp = {version = "0.16.0", default-features = false, features = ["grpc-tonic", "trace", "metrics"]}
opentelemetry-semantic-conventions = "0.15.0"
opentelemetry-stdout = {version = "0.4.0", default-features = false, features = ["trace", "metrics"]}
opentelemetry_sdk = {version = "0.23.0", default-features = false, features = ["trace", "rt-tokio", "metrics"]}
parking_lot = "0.12.3"
petgraph = "0.6.5"
pretty_assertions = "1.4.0"
quick-xml = "0.31.0"
rand = "0.8.5"
rayon = "1.10.0"
regex = "1.10.4"
rhai = {version = "1.18.0", features = ["internals", "sync", "serde"]}
robust = "1.1.0"
rstest = "0.21.0"
rust_xlsxwriter = "0.64.2"
schemars = "0.8.21"
serde = {version = "1.0.203", features = ["derive"]}
serde_derive = "1.0.203"
serde_json = {version = "1.0.117", features = ["arbitrary_precision"]}
serde_with = "3.8.1"
serde_yaml = "0.9.34"
sha2 = "0.10.8"
slog = {version = "2.7.0", features = ["release_max_level_trace", "max_level_trace"]}
strum = "0.26.2"
strum_macros = "0.26.3"
tempfile = "3.10.1"
thiserror = "1.0.61"
time = {version = "0.3.36", features = ["formatting"]}
tokio = {version = "1.38.0", features = ["full", "time"]}
tokio-stream = {version = "0.1.15", features = ["sync"]}
tokio-util = {version = "0.7.11", features = ["full"]}
toml = "0.8.14"
tracing = "0.1.40"
tracing-opentelemetry = {version = "0.24.0", default-features = false, features = ["tracing-log", "metrics"]}
tracing-subscriber = {version = "0.3.18", features = [
  "env-filter",
  "std",
  "time",
]}
typetag = "0.2.16"
url = "2.5.0"
uuid = {version = "1.8.0", features = [
  "v4",
  "fast-rng",
  "macro-diagnostics",
  "serde",
]}
