[package]
description = "Re:Earth Flow action library"
name = "reearth-flow-action"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
reearth-flow-common.workspace = true
reearth-flow-storage.workspace = true
reearth-flow-workflow.workspace = true

anyhow.workspace = true
bytes.workspace = true
chrono.workspace = true
csv = "1.3.0"
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
strum = "0.26"
strum_macros = "0.26"
thiserror.workspace = true
tokio-stream.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
